feat: add buttons download choose latex template after filling resume (#44)
* feat: add auth

* add publish

* add entities

* feat: make latex processor methods

* feat: add functionality to replace all replacements

* feat: slpdfjjskdfhjsd

* feat: remove other country in string representation

* kbwoghjirjg

* fix: uncommented resume nonnull fields

* fix appending extra value

---------

Co-authored-by: sold666 <korch937@mail.ru>
Co-authored-by: te4withm1lk <Bobgjaa@gmail.com>